# cnn-assignment3

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml  ruff.toml
.agent/skills/: tensorflow-data-pipelines  tensorflow-model-deployment  tensorflow-neural-networks  x-research
.agents/rules/: python-quality-gate.md
.claude/: settings.json
.claude/rules/: python-quality-gate.md
.codex/hooks/: persistent-mode.ts
.cursor/rules/: python-quality-gate.mdc
.gemini/: settings.json
docs/: cnn-ass3-PartB-design-plan.md  cnn-ass3-PartC-experimental-report.md  cnn-ass3-PartC-improvement-plan.md  cnn-ass3-faq.md  cnn-ass3-partA-project-proposal.md  cnn-ass3-yolo26-study.md  cnn.md
docs/lectures/: Week1-Lecture-2026.md  Week10-Lecture-2026.md  Week11-Lecture-2026.md  Week2-Lecture-2026.md  Week3-Lecture-2021.md  Week4-Lecture-2025.md  Week5-Lecture-2025.md  Week6-Lecture-2026.md  Week7-Lecture-2025.md  Week8-Lecture-2026.md  Week9-Lecture-2026.md
docs/plans/: yolo26m-seg-unified-model.md
model/: README.md  classes.json  metadata.yaml  per_class_metrics.csv  results.csv
model-v2/: metadata.yaml  per_class_metrics.csv  results.csv
runs/detect/train/: args.yaml
src/: colab_train.ipynb  extract_data.py  generate_seg_labels.py  image_segementation.py  initial-experiments.ipynb  initial_experiments.py  main.py  refine_seg_labels.py  sagemaker_count.ipynb  sagemaker_hf_upload.ipynb  sagemaker_hf_upload_s.ipynb  sagemaker_seg_train.ipynb  sagemaker_seg_train_s.ipynb  sagemaker_seg_train_v1.ipynb  sagemaker_seg_train_v2.ipynb  sagemaker_seg_train_v3.ipynb  sagemaker_train.ipynb  sahi_inference.py  seed_history_inferences.py
src/data/: over_sampling.py  over_sampling_seg.py
src/data/pipeline-defect/: config.yaml
src/week01/: main.py
src/week02/: main.py
src/week03/: main.py
src/week04/: main.py
src/week05/: main.py
src/week06/: main.py
src/week07/: main.py
src/week08/: main.py
src/week09/: main.py
src/week10/: main.py
src/week11/: main.py
src/week12/: main.py
tests/: test_demo.py  test_main.py  test_tensorflow.py
(+22144 files in other folders)
