[project]
name = "py-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0, <3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "openml>=0.15.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.2",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "poethepoet>=0.36.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poe.tasks]
run = "python src/main.py"
test = "pytest tests"
test-cov = "pytest tests --cov=src"
lint = "ruff check src/ tests/"
format = "ruff format src/ tests/"
type-check = "mypy src/"
pre-commit = "pre-commit run --all-files"
all-checks = ["lint", "format", "type-check", "test"]
